--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -24,7 +24,7 @@
 
   <div class="card">
     <div class="image">
-      <img src="/product-preview-card-component-main/images/image-product-desktop.jpg" alt="">
+      <img src="/image-product-desktop.jpg" alt="">
     </div>
     <div class="content">
       <p>Perfume</p>
